<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear_logs"
        app:showAsAction="always"
        android:icon="@drawable/baseline_clear_24"
        android:title="@string/menu_clear_logs" />

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/menu_refresh" />

<!--TODO: comment me-->
    <item
        android:id="@+id/action_import_json"
        android:icon="@drawable/baseline_input_24"
        android:title="@string/menu_import_json" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/menu_export_logs" />

    <item
        android:id="@+id/action_create_filter"
        android:title="@string/menu_create_filter" />

    <item
        android:id="@+id/action_clear_filters"
        android:title="@string/menu_clear_filters" />

    <item
        android:id="@+id/action_change_theme"
        android:title="@string/menu_action_toggle_theme" />

</menu>